Bug 1648355 - When doing a global font fallback search, load cmaps eagerly in the parent process. r=jwatt

This reduces IPC traffic, and avoids the (severe) impact of file access interception
and proxying by the sandbox on DirectWrite in content processes.

Differential Revision: https://phabricator.services.mozilla.com/D83240