gfx/thebes/gfxPlatformFontList.h
@@ -197,7 +197,8 @@ class gfxPlatformFontList : public gfxFontInfoLoader {
    */
   virtual void GetFacesInitDataForFamily(
       const mozilla::fontlist::Family* aFamily,
-      nsTArray<mozilla::fontlist::Face::InitData>& aFaces) const {}
+      nsTArray<mozilla::fontlist::Face::InitData>& aFaces,
+      bool aLoadCmaps) const {}
 
   virtual void GetFontList(nsAtom* aLangGroup, const nsACString& aGenericFamily,
                            nsTArray<nsString>& aListOfFonts);
@@ -278,8 +279,15 @@ class gfxPlatformFontList : public gfxFontInfoLoader {
   void SetupFamilyCharMap(uint32_t aGeneration,
                           const mozilla::fontlist::Pointer& aFamilyPtr);
 
-  [[nodiscard]] bool InitializeFamily(mozilla::fontlist::Family* aFamily);
-  void InitializeFamily(uint32_t aGeneration, uint32_t aFamilyIndex);
+  // Populate aFamily with face records, and if aLoadCmaps is true, also load
+  // their character maps (rather than leaving this to be done lazily).
+  // Note that even when aFamily->IsInitialized() is true, it can make sense
+  // to call InitializeFamily again if passing aLoadCmaps=true, in order to
+  // ensure cmaps are loaded.
+  [[nodiscard]] bool InitializeFamily(mozilla::fontlist::Family* aFamily,
+                                      bool aLoadCmaps = false);
+  void InitializeFamily(uint32_t aGeneration, uint32_t aFamilyIndex,
+                        bool aLoadCmaps);
 
   // name lookup table methods
 
